<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_payment_his_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin_small">

    <android.support.v7.widget.CardView
        android:id="@+id/card_upcoming_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/margin_small"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginBottom="@dimen/margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_small"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_thumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:src="@drawable/default_image" />

                <TextView
                    android:id="@+id/txt_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/release_date"
                    android:textSize="@dimen/text_size_h3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txt_movie_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/heading"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_is_adult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_adult_movie"
                        android:textSize="@dimen/text_size_h3"
                        android:layout_alignParentBottom="true"
                        android:gravity="right"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>