<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_height="200dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/linear_slider_dots"
        android:layout_below="@+id/viewPager"
        android:orientation="horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_slider_dots"
        android:layout_margin="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textSize="@dimen/text_size_h1" />

        <TextView
            android:id="@+id/txt_movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/heading"
            android:textSize="@dimen/text_size_h2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/popularity"
                android:textSize="@dimen/text_size_h2" />

            <TextView
                android:id="@+id/txt_movie_popularity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/popularity"
                android:textSize="@dimen/text_size_h2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/vote_count"
                android:textSize="@dimen/text_size_h2" />

            <TextView
                android:id="@+id/txt_vote_count"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/vote_count"
                android:textSize="@dimen/text_size_h2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/vote_avg"
                android:textSize="@dimen/text_size_h2" />

            <TextView
                android:id="@+id/txt_vote_avg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_weight="1"
                android:text="@string/vote_avg"
                android:textSize="@dimen/text_size_h2"/>

        </LinearLayout>

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:numStars="10"
            android:stepSize="0.1"
            style="?android:attr/ratingBarStyleIndicator"
            android:layout_gravity="center" />

    </LinearLayout>

</RelativeLayout>